# estudos_python

./: README.md  pyproject.toml
multithread/: mydata.txt
