[tool.poetry]
name = "estudos-python"
version = "0.1.0"
description = "Repo com pequenos scripts e pocs"
authors = ["williamfoschiera <william.foschiera@buser.com.br>"]
readme = "README.md"
packages = [{include = "estudos_python"}]

[tool.poetry.dependencies]
python = "^3.11"
ruff = "^0.3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
